--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="tab-contents active-tab" id="skills">
                     <ul>
                         <li><span>Programming Language</span><br>C, C++, Java, Dart, Html, Css, JavaScript</li>
-                        <li><span>Techincal Skills</span><br>Flutter, Express.ja, .NET</li>
+                        <li><span>Technical Skills</span><br>Flutter, Express.js, .NET, GIT</li>
                         <li><span>Framework</span><br>Firebase, MongoDB, SQL, Microsoft Azure, Android Studio</li>
                     </ul>
                 </div>
@@ -71,9 +71,9 @@
                 </div>
                 <div class="tab-contents" id="education">
                     <ul>
-                        <li><span>Bachelor's</span><br>Bacehlor's in Computer Applications<br><i>2021 - 2024</i></li>
-                        <li><span>Diploma</span><br>Designing web interfaces<br><i>2020 - 2021</i></li>
-                        <li><span>Senior Secondary Education</span><br>Designing app interfaces<br><i>2018 - 2020</i></li>
+                        <li><span>Bachelor's</span><br>Bachelor's in Computer Applications<br><i>2021 - 2024</i></li>
+                        <li><span>Diploma</span><br>Bachelor's in Vocation(Modern Office Practices)<br><i>2020 - 2021</i></li>
+                        <li><span>Senior Secondary Education</span><br>St. Soldier Divine Public School<br><i>2018 - 2020</i></li>
                     </ul>
                 </div>
             </div>
